@@ -935,8 +935,6 @@ int KSI_VerificationContext_init(KSI_VerificationContext *context, KSI_CTX *ctx)
 		goto cleanup;
 	}
 
-	context->ctx = NULL;
-	context->signature = NULL;
 	context->extendingAllowed = 0;
 	context->docAggrLevel = 0;
 	context->documentHash = NULL;
